# CMakeCTestCatch2

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.cpp
Testing/: CMakeLists.txt  bdd_style.cpp
